--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -268,7 +268,7 @@
     <section id="eventsWrap" class="none centered">
       
       <div class="row row-events text-center">
-        <h2> Tous les before </h2>
+        <h2> Tous les Meefore </h2>
         <h5 class="row-title-sub"> L'abus de soirées est excellent pour la santé.</h5>
       </div>
 
@@ -294,11 +294,14 @@
             <div class="event-filter slow-down-3">Plus tard</div>
           </div>
         </div>
-        <button class="theme-btn btn-create-event right">Créer un before</button>
+        <button class="theme-btn btn-create-event right">Proposer un meefore</button>
       </div>
 
       <div class="row row-events row-main">
         <div class="row-events-preview">
+              <!-- Dynamically loaded -->
+        </div>
+        <div class="row-party-preview">
               <!-- Dynamically loaded -->
         </div>
         <div class="row-events-map">
