--- a/public/css/search.css
+++ b/public/css/search.css
@@ -9,7 +9,8 @@
    letter-spacing: 1px;
 }
 
-.event-preview.etiquette.slow-down-3 {
+.event-preview,
+.party-preview {
    background: rgba(255, 255, 255, 0.81);
    border-bottom: 1px solid #E4E4E4;
    box-shadow: 0 0 1px #e4e4e4;
@@ -17,6 +18,8 @@
    border-radius: 2px 2px 0 0;
    /* display: inline-block; */
 }
+.party-preview {
+height: 69px;width: 400px;}
 
 .fb-overlay {
    width: 100%;
