--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -10,10 +10,11 @@
 
   <title>Dev Meefore | Home </title>
 
-  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Londrina+Solid' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Karla:700,400' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Londrina+Solid' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Karla:700,400' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/joyride.css">
@@ -267,7 +268,7 @@
     <section id="eventsWrap" class="none centered">
       
       <div class="row row-events text-center">
-        <h2> Tous les before </h2>
+        <h2> Tous les Meefore </h2>
         <h5 class="row-title-sub"> L'abus de soirées est excellent pour la santé.</h5>
       </div>
 
@@ -293,11 +294,14 @@
             <div class="event-filter slow-down-3">Plus tard</div>
           </div>
         </div>
-        <button class="theme-btn btn-create-event right">Créer un before</button>
+        <button class="theme-btn btn-create-event right">Proposer un meefore</button>
       </div>
 
       <div class="row row-events row-main">
         <div class="row-events-preview">
+              <!-- Dynamically loaded -->
+        </div>
+        <div class="row-party-preview">
               <!-- Dynamically loaded -->
         </div>
         <div class="row-events-map">
@@ -414,8 +418,8 @@
     window.facebook_app_id = "1638108873141834";
     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
-  
-   <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
+
+  <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
