--- a/public/css/search.css
+++ b/public/css/search.css
@@ -19,7 +19,7 @@
    /* display: inline-block; */
 }
 .party-preview {
-height: 69px;width: 400px;}
+height: 69px;/* width: 400px; */}
 
 .fb-overlay {
    width: 100%;
