--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -1,5 +1,5 @@
 
-.icon-emo-coffee:before { content: '\e800'; } /* '' */
+.icon-chill:before { content: '\e800'; } /* '' */
 .icon-mail:before { content: '\e801'; } /* '' */
 .icon-mail-alt:before { content: '\e802'; } /* '' */
 .icon-user:before { content: '\e803'; } /* '' */
@@ -22,7 +22,7 @@
 .icon-barcode-1:before { content: '\e814'; } /* '' */
 .icon-right-open-big:before { content: '\e815'; } /* '' */
 .icon-lock:before { content: '\e816'; } /* '' */
-.icon-crown:before { content: '\e817'; } /* '' */
+.icon-star:before { content: '\e817'; } /* '' */
 .icon-search:before { content: '\e818'; } /* '' */
 .icon-group:before { content: '\e819'; } /* '' */
 .icon-help:before { content: '\e81a'; } /* '' */
@@ -77,3 +77,11 @@
 .icon-mars:before { content: '\e84b'; } /* '' */
 .icon-up-open-big:before { content: '\e84c'; } /* '' */
 .icon-down-open-big:before { content: '\e84d'; } /* '' */
+.icon-happy:before { content: '\e84e'; } /* '' */
+.icon-evil:before { content: '\e84f'; } /* '' */
+.icon-cheers:before { content: '\e850'; } /* '' */
+.icon-comment:before { content: '\e852'; } /* '' */
+.icon-peace:before { content: '\e853'; } /* '' */
+.icon-innocent:before { content: '\e854'; } /* '' */
+.icon-drunk:before { content: '\e855'; } /* '' */
+.icon-horney:before { content: '\e856'; } /* '' */
