--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?7809747');
-  src: url('../font/fontello.eot?7809747#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?7809747') format('woff'),
-       url('../font/fontello.ttf?7809747') format('truetype'),
-       url('../font/fontello.svg?7809747#fontello') format('svg');
+  src: url('../font/fontello.eot?14590231');
+  src: url('../font/fontello.eot?14590231#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?14590231') format('woff'),
+       url('../font/fontello.ttf?14590231') format('truetype'),
+       url('../font/fontello.svg?14590231#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?7809747#fontello') format('svg');
+    src: url('../font/fontello.svg?14590231#fontello') format('svg');
   }
 }
 */
@@ -54,7 +54,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-emo-coffee:before { content: '\e800'; } /* '' */
+.icon-chill:before { content: '\e800'; } /* '' */
 .icon-mail:before { content: '\e801'; } /* '' */
 .icon-mail-alt:before { content: '\e802'; } /* '' */
 .icon-user:before { content: '\e803'; } /* '' */
@@ -77,7 +77,7 @@
 .icon-barcode-1:before { content: '\e814'; } /* '' */
 .icon-right-open-big:before { content: '\e815'; } /* '' */
 .icon-lock:before { content: '\e816'; } /* '' */
-.icon-crown:before { content: '\e817'; } /* '' */
+.icon-star:before { content: '\e817'; } /* '' */
 .icon-search:before { content: '\e818'; } /* '' */
 .icon-group:before { content: '\e819'; } /* '' */
 .icon-help:before { content: '\e81a'; } /* '' */
@@ -132,3 +132,11 @@
 .icon-mars:before { content: '\e84b'; } /* '' */
 .icon-up-open-big:before { content: '\e84c'; } /* '' */
 .icon-down-open-big:before { content: '\e84d'; } /* '' */
+.icon-happy:before { content: '\e84e'; } /* '' */
+.icon-evil:before { content: '\e84f'; } /* '' */
+.icon-cheers:before { content: '\e850'; } /* '' */
+.icon-comment:before { content: '\e852'; } /* '' */
+.icon-peace:before { content: '\e853'; } /* '' */
+.icon-innocent:before { content: '\e854'; } /* '' */
+.icon-drunk:before { content: '\e855'; } /* '' */
+.icon-horney:before { content: '\e856'; } /* '' */
