--- a/public/css/create.css
+++ b/public/css/create.css
@@ -9,6 +9,9 @@
    text-align: right;
    padding-right: 10px;
    vertical-align: top;
+   font-size: 13px;
+   position: relative;
+   top: 1px;
 }
 
 #createEvent input, #requestIn input {
