--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -85,17 +85,22 @@
   <!-- Header start -->
   <header class="lg-header none">
     <div id="headerContent">
+    <div class="preview-type beta">beta</div>
       <img id="logo" src="/img/logomeefore.png" width="48"></img>
       <ul id="menuWrap" class="">
         <li id="profile" class="menu-item menu-item-active icon icon-user" data-linkedcontent="#profileWrap"><span class="underlay"></span></li>
         <li id="events" class="menu-item icon icon-glass" data-linkedcontent="#eventsWrap"><span class="underlay"></span></li>
         <li id="search" class="menu-item icon icon-search"><span class="underlay"></span>
-          <div id="searchbar" class=""><input type="text" placeholder="Rechercher un membre" class="search-input"></div>
+          <div id="searchbar" class=""><input data-lid="h_search_placeholder" type="text" placeholder="Rechercher un membre" class="search-input"></div>
         </li>
         <li id="management" class="menu-item icon icon-users" data-linkedcontent="#manageEventsWrap"><span class="underlay"></span></li>
         <li id="settings" class="right menu-item icon icon-cog" data-linkedcontent="#settingsWrap"><span class="underlay"></span></li>
         <li id="contact" class="right menu-item icon icon-mail-alt nonei" data-linkedcontent="#contactWrap"><span class="underlay"></span></li>
       </ul>
+    </div>
+    <div id="languages">
+      <div class="pick-lang active" data-code="fr"><span class="flag-icon flag-icon-fr"></span></div>
+      <div class="pick-lang" data-code="en"><span class="flag-icon flag-icon-gb"></span></div>
     </div>
   </header>
   <!-- Header end -->
@@ -128,7 +133,7 @@
       </div>
       <div id="thumbInfos">
         <h2 id="thumbName"></h2>
-        <span id="logout" class="action">Log out</span>
+        <span data-lid="h_logout" id="logout" class="action">Log out</span>
       </div>
     </section>
 
@@ -136,7 +141,7 @@
 
       <!-- Titre et sous-titre  -->
       <div class="row row-profile">
-        <h2> Mon profile </h2>
+        <h2 data-lid="p_title"> Mon profile </h2>
         <div class="row-subheader none">
           <div class="row-subheader-xp"><span class="xp-amount">1000</span><span>pts</span></div>
           <div class="row-subheader-bar"></div>
@@ -161,60 +166,59 @@
       <!-- Edition des photos -->
       <div class="row row-profile row-pictures">
         <div class="row-title">
-          <div class="row-title-text">Tes 5 photos</div>
+          <div data-lid="p_pictures_title" class="row-title-text">Tes 5 photos</div>
           <i class="icon icon-edit icon-feather right"></i>
         </div>
         <div class="row-subtitle">
-          <div class="row-subtitle-text etiquette">Plusieurs photos valent mieux qu'un long discours! Montre toi sous ton plus beau jour.</div>
+          <div data-lid="p_pictures_subtitle" class="row-subtitle-text etiquette">Plusieurs photos valent mieux qu'un long discours! Montre toi sous ton plus beau jour.</div>
         </div>
         <div class="row-body row-center picture-wrap" >
           <!-- Dynamically loaded -->
         </div>
         <div class="row-buttons">
-          <button class="theme-btn btn-cancel right">Annuler</button>
-          <button class="theme-btn btn-validate right">Valider</button>
+          <button data-lid="p_button_validate" class="theme-btn btn-cancel right">Annuler</button>
+          <button data-lid="p_button_cancel" class="theme-btn btn-validate right">Valider</button>
         </div>
       </div>
-
-
+ 
       <!-- Edition des informations  -->
-      <div class="row row-profile row-informations row-select-daddy ">
+      <div class="row row-profile row-informations row-select-daddy">
 
         <div class="row-title">
-          <div class="row-title-text">Informations</div>
+          <div data-lid="p_info_title" class="row-title-text">Informations</div>
           <i class="icon icon-edit icon-feather right"></i>
         </div>
 
         <div class="row-subtitle">
-          <div class="row-subtitle-text etiquette">Dis nous tout, et surtout concentre toi sur l'essentiel</div>
+          <div data-lid="p_info_subtitle" class="row-subtitle-text etiquette">Dis nous tout, et surtout concentre toi sur l'essentiel</div>
         </div>
 
         <div class="row-body">
           <div class="row-divider"></div>
           <div class="row-input row-input-md row-name etiquette">
-            <label for="name" class="label label-md">Nom</label>
-            <input readonly id="name" class="" placeholder="Prad Bitt" type="text" maxlength="25">
+            <label data-lid="p_name_label" for="name" class="label label-md">Nom</label>
+            <input data-lid="p_name_placeholder" readonly id="name" class="" placeholder="Prad Bitt" type="text" maxlength="25">
           </div>
           <div class="row-input row-input-md row-age etiquette">
-            <label for="age" class="label label-md" >Age</label>
+            <label  data-lid="p_age_label" for="age" class="label label-md" >Age</label>
             <input readonly id="age" class="" placeholder="25" type="number" max="50" min="18">
           </div>
           <div class="row-input row-input-md row-country etiquette">
-            <label class="label label-md" for="description">Pays</label>
+            <label data-lid="p_country_label" class="label label-md" for="description">Pays</label>
             <input id="country" readonly maxlength="40" type="text" class="readonly">
           </div>
           <div class="row-input row-input-md row-job etiquette">
-            <label class="label label-md" for="situation">Situation</label>
+            <label data-lid="p_job_label" class="label label-md" for="situation">Situation</label>
             <input readonly id="situation" class="" placeholder="Chirurgien, contrôleur RATP, bûcheron" type="text">
           </div>
           <div class="row-input row-input-lg row-mood etiquette">
-            <label for="mood" class="label label-md" >Lifestyle</label>
+            <label data-lid="p_lifestyle_label" for="mood" class="label label-md" >Lifestyle</label>
             <div class="row-select-wrap mood-wrap">
               <!-- Dynamically loaded -->
             </div>
           </div>
           <div class="row-input row-input-lg row-drink etiquette">
-            <label for="drink" class="label label-md" >Verre</label>
+            <label data-lid="p_drink_label" for="drink" class="label label-md" >Verre</label>
             <div class="row-select-wrap drink-wrap">
               <!-- Dynamically loaded -->
             </div>
@@ -222,8 +226,8 @@
         </div>
 
         <div class="row-buttons">
-          <button class="theme-btn btn-cancel right">Annuler</button>
-          <button class="theme-btn btn-validate right">Valider</button>
+          <button data-lid="p_button_validate" class="theme-btn btn-cancel right">Annuler</button>
+          <button data-lid="p_button_cancel" class="theme-btn btn-validate right">Valider</button>
         </div>
 
       </div>
@@ -231,15 +235,15 @@
       <!-- Amis sur meefore  -->
       <div class="row row-profile row-friends">
         <div class="row-title">
-          <div class="row-title-text">Tout le monde est sur meefore</div>
+          <div data-lid="p_friends_title" class="row-title-text">Tout le monde est sur meefore</div>
           <i class="icon icon-edit icon-feather right"></i>
         </div>
         <div class="row-subtitle">
-          <div class="row-subtitle-text etiquette">Tes amis Facebook sont tous sur meefore. Il en manque ? Invites-les et gagne des points!</div>
+          <div data-lid="p_friends_subtitle" class="row-subtitle-text etiquette">Tes amis Facebook sont tous sur meefore. Il en manque ? Invites-les et gagne des points!</div>
         </div>
         <div class="row-divider"></div>
         <div class="row-body">
-          <h3>Vous n'avez aucun ami Facebook inscrit. Participer à des before risque d'être compliqué...</h3>
+          <h3 data-lid="p_friends_nofriends" >Vous n'avez aucun ami Facebook inscrit. Participer à des before risque d'être compliqué...</h3>
            <!-- Dynamically loaded -->
         </div>
       </div>
@@ -267,8 +271,8 @@
     <section id="eventsWrap" class="none centered">
       
       <div class="row row-events text-center">
-        <h2> Tous les Meefore </h2>
-        <h5 class="row-title-sub"> L'abus de soirées est excellent pour la santé.</h5>
+        <h2 data-lid="e_title" > Tous les Meefore </h2>
+        <h5 data-lid="e_subtitle" class="row-title-sub"> L'abus de soirées est excellent pour la santé.</h5>
       </div>
 
       <div class="row row-events row-events-filters etiquette">
@@ -293,7 +297,7 @@
             <div class="event-filter slow-down-3">Plus tard</div>
           </div>
         </div>
-        <button class="theme-btn btn-create-event right">Proposer un meefore</button>
+        <button data-lid="e_create_button" class="theme-btn btn-create-event right">Proposer un meefore</button>
       </div>
 
       <div class="row row-events row-main">
@@ -306,13 +310,16 @@
         <div class="row-events-map">
           <!-- Dynamically loaded -->
         </div>
-        <div class="row-events-accepted-tabview">
-          <!-- Dynamically loaded -->
-        </div>
-          <!-- Dynamicalled loaded [ row events accepted in view are apppended here ] -->
       </div>
+
     </section>
   
+    <div class="row row-events row-events-accepted">
+      <div class="row-events-accepted-tabview">
+        <!-- Dynamically loaded -->
+      </div>
+        <!-- Dynamicalled loaded [ row events accepted in view are apppended here ] -->
+    </div>
 
     <section id="searchUsersWrap" class="none centered">
       <h2>Team de soirée</h2>
@@ -334,7 +341,7 @@
     <section id="settingsWrap" class="none centered">
 
       <div class="row row-settings">
-        <h2> Préférences </h2>
+        <h2 data-lid="s_title" > Préférences </h2>
       </div>
 
       <div class="row-divider"></div>
@@ -342,29 +349,29 @@
       <div class="row row-settings row-ux row-select-daddy">
 
         <div class="row-title">
-          <div class="row-title-text">Application</div>
+          <div data-lid="s_app_title" class="row-title-text">Application</div>
           <i class="icon icon-edit icon-feather right"></i>
         </div>
 
         <div class="row-subtitle">
-          <div class="row-subtitle-text etiquette">Modifier le comportement général de l'application</div>
+          <div data-lid="s_app_subtitle" class="row-subtitle-text etiquette">Modifier le comportement général de l'application</div>
         </div>
 
         <div class="row-body">
         <div class="row-divider"></div>
           <div class="row-input row-input-lg row-auto_login etiquette">
-            <label class="label label-lg"for="">Auto login</label>
+            <label data-lid="s_app_autologin_label" class="label label-lg"for="">Auto login</label>
             <div class="row-select-wrap">
-              <div class="row-select auto_login" data-selectid="yes">Oui</div>
-              <div class="row-select auto_login" data-selectid="no">Non</div>
+              <div data-lid="s_yes" class="row-select auto_login" data-selectid="yes">Oui</div>
+              <div data-lid="s_no" class="row-select auto_login" data-selectid="no">Non</div>
             </div>
-            <div class="row-select-description etiquette">Activez cette option pour skipper la page d'accueil</div>
+            <div data-lid="s_app_autologin_desc" class="row-select-description etiquette">Activez cette option pour skipper la page d'accueil</div>
           </div>
         </div>
 
         <div class="row-buttons">
-          <button class="theme-btn btn-cancel right">Annuler</button>
-          <button class="theme-btn btn-validate right">Valider</button>
+          <button data-lid="p_button_cancel" class="theme-btn btn-cancel right">Annuler</button>
+          <button data-lid="p_button_validate" class="theme-btn btn-validate right">Valider</button>
         </div>
 
       </div>  
@@ -372,37 +379,37 @@
       <div class="row row-settings row-notifications row-select-daddy">
 
         <div class="row-title">
-          <div class="row-title-text">Alertes et notifications</div>
+          <div data-lid="s_alerts_title" class="row-title-text">Alertes et notifications</div>
           <i class="icon icon-edit icon-feather right"></i>
         </div>
 
         <div class="row-subtitle">
-          <div class="row-subtitle-text etiquette">Restez alerté en temps réel lorsqu'un évènement est créé près de chez vous</div>
+          <div data-lid="s_alerts_subtitle" class="row-subtitle-text etiquette">Restez alerté en temps réel lorsqu'un évènement est créé près de chez vous</div>
         </div>
 
         <div class="row-body">
         <div class="row-divider"></div>
           <div class="row-input row-input-lg row-newsletter etiquette">
-            <label class="label label-lg"for="">Newsletter</label>
+            <label data-lid="s_alerts_newsletter_label" class="label label-lg"for="">Newsletter</label>
             <div class="row-select-wrap">
-              <div class="row-select newsletter" data-selectid="yes">Oui</div>
-              <div class="row-select newsletter" data-selectid="no">Non</div>
+              <div data-lid="s_yes" class="row-select newsletter" data-selectid="yes">Oui</div>
+              <div data-lid="s_no" class="row-select newsletter" data-selectid="no">Non</div>
             </div>
-             <div class="row-select-description etiquette">Notre newsletter est envoyée tous les dimanches</div>
+             <div data-lid="s_alerts_newsletter_desc" class="row-select-description etiquette">Notre newsletter est envoyée tous les dimanches</div>
           </div>
 
           <div class="row-input row-input-lg row-invitations etiquette">
-            <label class="label label-lg"for="">Invitations</label>
+            <label data-lid="s_alerts_invits_label" class="label label-lg"for="">Invitations</label>
             <div class="row-select-wrap">
-              <div class="row-select invitations" data-selectid="yes">Oui</div>
-              <div class="row-select invitations" data-selectid="no">Non</div> 
+              <div data-lid="s_yes" class="row-select invitations" data-selectid="yes">Oui</div>
+              <div data-lid="s_no" class="row-select invitations" data-selectid="no">Non</div> 
             </div>
-             <div class="row-select-description etiquette">Bons plans pour être invités à des soirées en VIP</div>
+             <div data-lid="s_alerts_invits_desc" class="row-select-description etiquette">Bons plans pour être invités à des soirées en VIP</div>
           </div>
 
           <div class="row-buttons">
-            <button class="theme-btn btn-cancel right">Annuler</button>
-            <button class="theme-btn btn-validate right">Valider</button>
+            <button data-lid="p_button_cancel" class="theme-btn btn-cancel right">Annuler</button>
+            <button data-lid="p_button_validate" class="theme-btn btn-validate right">Valider</button>
           </div>
 
         </div>
@@ -413,12 +420,12 @@
 
   </div>
   
-  <script id="app_ids">
+   <script id="app_ids">
     window.facebook_app_id = "1638108873141834";
     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
 
- <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
+  <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
@@ -430,6 +437,7 @@
 
   <!-- custom scripts -->
   <script src="js/src/lj-params.js"></script>
+  <script src="js/src/languages/lj-textsource.js"></script>
   <script src="js/src/lj-helpers.js"></script>
   <script src="js/src/tpl/lj-render-profile.js"></script>
   <script src="js/src/tpl/lj-render-user-profile.js"></script>
@@ -454,6 +462,7 @@
   <script src="js/src/profile/lj-profile.js"></script>
   <script src="js/src/pusher/lj-pusher.js"></script>
   <script src="js/src/errors/lj-errors.js"></script>
+  <script src="js/src/languages/lj-languages.js"></script>
   <script src="js/src/init/lj-init.js"></script>
   <script src="js/src/lj-junk.js"></script>
 
